[package]
name = "config-items"
version = "0.1.4"
edition = "2021"
authors = ["Diego Florio <diegoefe@gmail.com>"]
license = "MIT"
description = "A library with common configuration items and utility functions"
readme = "README.md"
homepage = "https://github.com/diegoefe/config-items"
repository = "https://github.com/diegoefe/config-items"
categories = ["config"]
keywords = ["config", "configuration", "items"]
documentation = "https://docs.rs/config-items/"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_derive = "1"
log = "0.4"
log4rs = "1.2"
yaml-merge-keys = { version = "0.6", features = [ "serde_yaml" ] }
# linked-hash-map = { version = "0.5.6", features = [ "serde", "serde_impl" ] }

[dev-dependencies]
clap = "3"

[lib]
name = "config_items"
path = "src/lib.rs"
# doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
