[package]
name = "config-items"
version = "0.2.0"
edition = "2021"
authors = ["Diego Florio <diegoefe@gmail.com>"]
license = "MIT"
description = "A library with common configuration items and utility functions"
readme = "README.md"
homepage = "https://github.com/diegoefe/config-items"
repository = "https://github.com/diegoefe/config-items"
categories = ["config"]
keywords = ["config", "configuration", "items"]
documentation = "https://docs.rs/config-items/"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
serde_derive = "1.0.215"
log = "0.4.22"
log4rs = "1.3.0"
yaml-merge-keys = { version = "0.6", features = [ "serde_yaml" ] }

[dev-dependencies]
clap = "3.0.0"

[lib]
name = "config_items"
path = "src/lib.rs"
# doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
