[package]
name = "config-items"
version = "0.3.1"
edition = "2021"
authors = ["Diego Florio <diegoefe@gmail.com>"]
license = "MIT"
description = "A library with common configuration items and utility functions"
readme = "README.md"
homepage = "https://github.com/diegoefe/config-items"
repository = "https://github.com/diegoefe/config-items"
categories = ["config"]
keywords = ["config", "configuration", "items"]
documentation = "https://docs.rs/config-items/"

[features]
default = ["logging"]
logging = ["dep:log", "dep:log4rs"]

[dependencies]
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_derive = "1.0"
log = { version = "0.4", optional = true }
log4rs = { version = "=1.3.0", optional = true }
yaml-merge-keys = { version = "0.8", features = [ "serde_yaml" ] }

[dev-dependencies]
clap = "3.2.25"

[lib]
name = "config_items"
path = "src/lib.rs"
# doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
